# cppChatOnline_Server

./: README.md
common/: channel.hpp  elasticlient.hpp  etcd.hpp  log.hpp  rabbitMQ.hpp  speechAsr.hpp
fileService/source/: fileService.cc
proto/: base.proto  file.proto  speech.proto
sourceCode/: CMakeLists.txt
sourceCode/chatSessionServer/: CMakeLists.txt
sourceCode/chatSessionServer/source/: chatSessionServer.cc  chatSessionServer.hpp
sourceCode/chatSessionServer/test/: chatSessionClient.cc
sourceCode/common/: dms.hpp  elasticlient.hpp  esData.hpp  log.hpp  mysql.hpp  rabbitMQ.hpp  redis.hpp  speechAsr.hpp  util.hpp
sourceCode/common/mysql/: MChatSession.hpp  MChatSessionUser.hpp  MFriend.hpp  MFriendApply.hpp  MMessage.hpp  MUser.hpp  ODBFactory.hpp
sourceCode/common/mysql/test/: makefile
sourceCode/fileServer/: CMakeLists.txt
sourceCode/fileServer/source/: fileServer.cc  fileServer.hpp
sourceCode/fileServer/test/: fileClient.cc
sourceCode/fileService/: CMakeLists.txt
sourceCode/fileService/source/: fileService.hpp
sourceCode/friendServer/: CMakeLists.txt
sourceCode/friendServer/source/: friendServer.cc  friendServer.hpp
sourceCode/gatewayServer/: CMakeLists.txt  connection.hpp  gatewayServer.cc  gatewayServer.hpp
sourceCode/messageServer/: CMakeLists.txt
sourceCode/messageServer/source/: messageServer.cc  messageServer.hpp
sourceCode/odb/: chatSession.hxx  chatSessionUser.hxx  friend.hxx  friendApply.hxx  message.hxx  user.hxx
sourceCode/proto/: base.proto  chatSession.proto  friend.proto  gateway.proto  message.proto  user.proto  websocket.proto
sourceCode/speechServer/: CMakeLists.txt
sourceCode/speechServer/source/: speechServer.cc
sourceCode/speechService/: CMakeLists.txt
sourceCode/speechService/source/: speechService.cc
sourceCode/thirdInclude/speechApi/base/: utils.h
sourceCode/userServer/: CMakeLists.txt
sourceCode/userServer/source/: userServer.cc  userServer.hpp
sourceCode/userServer/test/es/: makefile
sourceCode/userServer/test/mysql/: main.cc
sourceCode/userService/: CMakeLists.txt
sourceCode/userService/source/: userService.cc  userService.hpp
sourceCode/userService/test/: main.cc  makefile  userClient.cc
sourceCode/userService/test/es/: main.cc
sourceCode/userService/test/mysql/: makefile
sourceCode/userService/test/redis/: main.cc  makefile
speechService/source/: speechService.hpp
speechService/test/: speechClient.cc
testCode/: makefile  test  test.cc  test2  test2.cc
testCode/brpc/: client.cc  main.pb.cc  main.pb.h  main.proto  makefile  server.cc
testCode/cmake/: CMakeLists.txt
testCode/es/: main  main.cc  makefile
testCode/etcd/: etcdGetTest  etcdGetTest.cc  etcdPutTest  etcdPutTest.cc  makefile
testCode/gflags/: gflags.conf  gflagsTest  gflagsTest.cc  makefile
testCode/gtest/: gtestTest  gtestTest.cc  makefile
testCode/json/: main  main.cc  makefile
testCode/obd/: main.cc  makefile  student-odb.hxx  student.hxx
testCode/odb/: main.cc  student-odb.cxx  student-odb.ixx  student.hxx  student.sql
testCode/rabbitMQ/: c  c.cc  makefile  p  p.cc
testCode/redis/: main.cc  makefile
testCode/spdlog/: asyncSpdlogTest  asyncSpdlogTest.cc  makefile  spdlogTest  spdlogTest.cc
testCode/speech/: main.cc  makefile
