cmake_minimum_required(VERSION 3.1.3)
project(all)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/userServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fileServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/speechServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/chatSessionServer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/messageServer)
set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR})